highlights flicker fix

--- a/inst/app/www/custom.css
+++ b/inst/app/www/custom.css
@@ -74,7 +74,6 @@ b.segment {
   font-weight: normal;
   text-decoration-thickness: 5px !important; 
   text-underline-offset: 3px !important;
-  font-weight: normal;
 }
 
 
